fix: gap in notifications

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ body {
   height: 3.5rem;
   padding: 1rem 0.5rem;
   background-color: var(--notification);
-  gap: 0.5rem;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
 }
